explorviz-istio/explorviz/templates/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: istio-ingressgateway-ingress
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: istio-playground.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
